restructure project into separate backend and frontend
- Move Next.js app from neverlate/ to frontend/ directory
- Create a simple FastAPI backend
- Reorganize auth flow (signin/signup instead of login)
- Extract reusable auth components (AuthLayout, AuthButton, AuthInput, AuthMessage)
- Set up Python virtual environment with FastAPI and Supabase dependencies
- Update .gitignore for new project structure
- simplified the UI

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,11 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# docs
-/neverlate/docs
+# documentation
+/docs
+
+# python (backend)
+/backend/__pycache__
+/backend/venv
+/backend/env
+/backend/env.local
